--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -3,7 +3,10 @@
 
 A proposta desse projeto \'e desenvolver um aplicativo para dispositivos m\'oveis com sistema operacional Android, tendo como fun\c{c}\~ao principal o \sigla{RAA}{retroalimenta\c{c}\~ao auditiva atrasada}, ou seja, um aplicativo que consiga reproduzir a voz do usu\'ario simultaneamente com um pequeno atraso configur\'avel, num tom diferente tamb\'em configur\'avel. 
 
+O atraso ser\'a medido em milissegundos, sendo poss\'ivel utilizar o intervalo entre 100 e 3000 milissegundos (0,1 e 3 segundos). A frequ\^encia ser\'a medida em Mega-hertz, possuindo as op\c{c}\~oes de 4 intervalos: 500, 1.000, 2.000 e 4.000 Mhz respectivamente.  Esses dados foram obtidos atrav\'es de uma pesquisa, onde participaram 20 indiv\'iduos com gagueira de 7 a 17 anos, resultando em uma diminui\c{c}\~ao estatisticamente significante na ocorr\^encia de bloqueios e repeti\c{c}\~oes de palavras em indiv\'iduos com gagueira sem altera\c{c}\~ao do processamento auditivo central, ou seja, sem altera\c{c}\~ao na capacidade que o sistema nervoso tem para traduzir as informa\c{c}\~oes enviadas pela audi\c{c}\~ao \cite{PICOLOTO2017}.
+
 A finalidade dessas configura\c{c}\~oes que devem ser adaptadas para cada indiv\'iduo \'e simular o efeito coro, que nada mais \'e do que um efeito causado quando uma pessoa que possui gagueira, fala ou l\^e ao mesmo tempo que outra, trazendo melhorias significativas na fala \cite{Udemo2008}.
+
 
 \section{Tecnologias e Ferramentas}
 \begin{itemize}
