--- a/Dissertacao/Referencias/referencias.bib
+++ b/Dissertacao/Referencias/referencias.bib
@@ -15,6 +15,20 @@
   url       = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S1516-80342008000400018&nrm=iso},
 }
 
+@Article{PICOLOTO2017,
+  author    = {Picoloto, Luana Altran AND Cardoso, Ana Cl\'audia Vieira AND Cerqueira, Amanda Venuti AND Oliveira, Cristiane Mo\c{c}\o Canhetti},
+  title     = {Efeito da retroalimenta\c{c}\~ao auditiva atrasadana gagueira com e sem altera\c{c}\~ao doprocessamento auditivo central.},
+  journal   = {CoDAS},
+  year      = {2017},
+  volume    = {29},
+  month     = {00},
+  issn      = {2317-1782},
+  crossref  = {10.1590/2317-1782/201720170038},
+  language  = {pt},
+  publisher = {scielo},
+  url       = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S2317-17822017000600307&nrm=iso},
+}
+
 @Article{Buechel2004,
   author    = {Buchel, Christian AND Sommer, Martin},
   title     = {What Causes Stuttering?},
