--- a/Dissertacao/modelo_dissertacao.tex
+++ b/Dissertacao/modelo_dissertacao.tex
@@ -179,7 +179,7 @@ This project aims to develop an application for mobile devices, which meets the 
 
 
 %%%%%% Lista de Ilustrações conforme ABNT
-\listadeilustracoes
+%%\listadeilustracoes
 \listadefiguras % geração automática da lista de figuras
 \listadetabelas % geração automática da lista de tabelas
 %%\listadesiglas  % geração automática da lista de siglas
