--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -94,7 +94,7 @@ A prioridade dos requisitos pode ser classificada em:
 		\hline
 		\textbf{Id} & \textbf{Descri\c{c}\~ao} & \textbf{Prioridade} & \textbf{Requisitos Relacionados}\\
 		\hline
-		RF01 & O aplicativo deve permitir ao usu\'ario editar as prefer\^encias de utiliza\c{c}\~ao do aplicativo, como tipo de fone utilizado, altura do volume, frequ\^encia e delay. & Essencial & RF02 - RF04\\
+		RF01 & O aplicativo deve permitir ao usu\'ario editar as prefer\^encias de utiliza\c{c}\~ao do aplicativo, como tipo de fone utilizado, altura do volume, frequ\^encia e atraso. & Essencial & RF02 - RF04\\
 		\hline
 		RF02 & O aplicativo deve permitir ao usu\'ario iniciar e interromper a simula\c{c}\~ao do efeito coro. & Essencial & N/A \\
 		\hline
