--- a/Dissertacao/Referencias/referencias.bib
+++ b/Dissertacao/Referencias/referencias.bib
@@ -1,166 +1,185 @@
 % Encoding: UTF-8
 
 @Article{Andrade2008,
-  author    = {Andrade, Claudia Regina Furquim de AND Andrade, Camila Quintiliano de AND Buoso, Daniel da Silva AND Silva, Lidiane Dias AND Juste, Fab\~A\-ola Star\~A\textthreesuperiorbole},
-  title     = {The effect of SpeechEasy on stuttering frequency, speech rate and speech naturalness},
-  journal   = {Revista da Sociedade Brasileira de Fonoaudiologia},
-  year      = {2008},
-  volume    = {13},
-  pages     = {411 - 412},
-  month     = {00},
-  issn      = {1516-8034},
-  crossref  = {10.1590/S1516-80342008000400018},
-  language  = {pt},
-  publisher = {scielo},
-  url       = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S1516-80342008000400018&nrm=iso},
+  author        = {Andrade, Claudia Regina Furquim de AND Andrade, Camila Quintiliano de AND Buoso, Daniel da Silva AND Silva, Lidiane Dias AND Juste, Fab\~A\-ola Star\~A\textthreesuperiorbole},
+  title         = {The effect of SpeechEasy on stuttering frequency, speech rate and speech naturalness},
+  journal       = {Revista da Sociedade Brasileira de Fonoaudiologia},
+  year          = {2008},
+  volume        = {13},
+  pages         = {411 - 412},
+  month         = {00},
+  issn          = {1516-8034},
+  crossref      = {10.1590/S1516-80342008000400018},
+  language      = {pt},
+  publisher     = {scielo},
+  url           = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S1516-80342008000400018&nrm=iso},
+  urlaccessdate = {01 mai. 2018},
 }
 
 @Article{PICOLOTO2017,
-  author    = {Picoloto, Luana Altran AND Cardoso, Ana Cl\'audia Vieira AND Cerqueira, Amanda Venuti AND Oliveira, Cristiane Mo\c{c}\o Canhetti},
-  title     = {Efeito da retroalimenta\c{c}\~ao auditiva atrasadana gagueira com e sem altera\c{c}\~ao doprocessamento auditivo central.},
-  journal   = {CoDAS},
-  year      = {2017},
-  volume    = {29},
-  month     = {00},
-  issn      = {2317-1782},
-  crossref  = {10.1590/2317-1782/201720170038},
-  language  = {pt},
-  publisher = {scielo},
-  url       = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S2317-17822017000600307&nrm=iso},
+  author        = {Picoloto, Luana Altran AND Cardoso, Ana Cl\'audia Vieira AND Cerqueira, Amanda Venuti AND Oliveira, Cristiane Mo\c{c}\o Canhetti},
+  title         = {Efeito da retroalimenta\c{c}\~ao auditiva atrasadana gagueira com e sem altera\c{c}\~ao doprocessamento auditivo central.},
+  journal       = {CoDAS},
+  year          = {2017},
+  volume        = {29},
+  month         = {00},
+  issn          = {2317-1782},
+  crossref      = {10.1590/2317-1782/201720170038},
+  language      = {pt},
+  publisher     = {scielo},
+  url           = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S2317-17822017000600307&nrm=iso},
+  urlaccessdate = {01 mai. 2018},
 }
 
 @Article{Buechel2004,
-  author    = {Buchel, Christian AND Sommer, Martin},
-  title     = {What Causes Stuttering?},
-  journal   = {PLOS Biology},
-  year      = {2004},
-  volume    = {2},
-  number    = {2},
-  month     = {02},
-  abstract  = {The mystery of a sometimes debilitating speech disorder is examined by cognitive neuroscientists.},
-  doi       = {10.1371/journal.pbio.0020046},
-  publisher = {Public Library of Science},
-  url       = {https://doi.org/10.1371/journal.pbio.0020046},
+  author        = {Buchel, Christian AND Sommer, Martin},
+  title         = {What Causes Stuttering?},
+  journal       = {PLOS Biology},
+  year          = {2004},
+  volume        = {2},
+  number        = {2},
+  month         = {02},
+  abstract      = {The mystery of a sometimes debilitating speech disorder is examined by cognitive neuroscientists.},
+  doi           = {10.1371/journal.pbio.0020046},
+  publisher     = {Public Library of Science},
+  url           = {https://doi.org/10.1371/journal.pbio.0020046},
+  urlaccessdate = {01 mai. 2018},
 }
 
 @Article{Merlo2013,
-  author  = {Merlo, Sandra},
-  title   = {Caracteriza\c{c}\~ao da gagueira.},
-  journal = {Instituto Brasileiro de Flu\^encia - IBF},
-  year    = {2013},
-  url     = {http://www.gagueira.org.br/conteudo.asp?id_conteudo=29},
-}
-
-@Article{Fiorin2015,
-  author  = {Fiorin, Michele},
-  title   = {Compara\c{c}\~ao do Efeito Imediato da Retroalimenta\c{c}\~ao Auditiva Atrasada, Mascarada e Amplificada na Fala de Gagos e de N\~ao Gagos.},
-  journal = {Univerisdade Estadual Paulista - Programa de P\'os-Gradua\c{c}\~ao em Fonoaudiologia.},
-  year    = {2015},
-  url     = {http://br.123dok.com/document/ozlx3egz-comparacao-do-efeito-imediato-da-retroalimentacao-auditiva-atrasada-mascarada-e-amplificada-na-fala-de-gagos-e-de-nao-gagos.html},
-}
-
-@Article{Udemo2008,
-  author  = {Udemo},
-  title   = {Efeito coro},
-  journal = {Folha de S\~ao Paulo},
-  year    = {2008},
-  url     = {http://www.udemo.org.br/Leituras/Leituras_161.htm},
-}
-
-@Article{Solvus2016,
-  author  = {Solvus},
-  title   = {O que preciso para publicar um aplicativo?},
-  journal = {Blog},
-  year    = {2016},
-  url     = {http://solvus.com.br/4-coisas-que-voce-precisa-saber-para-publicar-um-aplicativo-apple-store-google-play/},
+  author        = {Merlo, Sandra},
+  title         = {Caracteriza\c{c}\~ao da gagueira.},
+  journal       = {Instituto Brasileiro de Flu\^encia - IBF},
+  year          = {2013},
+  url           = {http://www.gagueira.org.br/conteudo.asp?id_conteudo=29},
+  urlaccessdate = {01 mai. 2018},
 }
 
 @Article{Microson2015,
-  author  = {Microson},
-  title   = {Saiba mais sobre a gagueira},
-  journal = {Como funciona o SpeechEasy?},
-  year    = {2015},
-  url     = {http://www.microsom.com.br/saiba-mais-sobre-gagueira/saiba-mais-sobre-gagueira-como-funciona/},
+  author        = {Microson},
+  title         = {Saiba mais sobre a gagueira},
+  journal       = {Como funciona o SpeechEasy?},
+  year          = {2015},
+  url           = {http://www.microsom.com.br/saiba-mais-sobre-gagueira/saiba-mais-sobre-gagueira-como-funciona/},
+  urlaccessdate = {02 mai. 2018},
+}
+
+@Article{Udemo2008,
+  author        = {Udemo},
+  title         = {Efeito coro},
+  journal       = {Folha de S\~ao Paulo},
+  year          = {2008},
+  url           = {http://www.udemo.org.br/Leituras/Leituras_161.htm},
+  urlaccessdate = {02 mai. 2018},
+}
+
+@Article{Solvus2016,
+  author        = {Solvus},
+  title         = {O que preciso para publicar um aplicativo?},
+  journal       = {Blog},
+  year          = {2016},
+  note          = {Acesso em: 20 abr. 2018},
+  url           = {http://solvus.com.br/4-coisas-que-voce-precisa-saber-para-publicar-um-aplicativo-apple-store-google-play/},
+  urlaccessdate = {04 mar. 2018},
+}
+
+@Article{Microson2015,
+  author        = {Microson},
+  title         = {Saiba mais sobre a gagueira},
+  journal       = {Como funciona o SpeechEasy?},
+  year          = {2015},
+  url           = {http://www.microsom.com.br/saiba-mais-sobre-gagueira/saiba-mais-sobre-gagueira-como-funciona/},
+  urlaccessdate = {04 mai. 2018},
 }
 
 @Article{Artefact2012,
-  author  = {Artefact LCC},
-  title   = {DAF Assistant},
-  journal = {Google Play},
-  year    = {2012},
-  url     = {https://play.google.com/store/apps/details?id=com.artefactsoft.daf&hl=pt},
+  author        = {Artefact LCC},
+  title         = {DAF Assistant},
+  journal       = {Google Play},
+  year          = {2012},
+  url           = {https://play.google.com/store/apps/details?id=com.artefactsoft.daf&hl=pt},
+  urlaccessdate = {04 mai. 2018},
 }
 
 @Article{Udacity2017,
-  author  = {Udacity},
-  title   = {Metodologia Scrum e Agile. Oque s\~ao e como aplic\'a-las?},
-  journal = {Web Mobile Marketing Digital},
-  year    = {2017},
-  url     = {https://br.udacity.com/blog/post/metodologia-scrum-agile},
+  author        = {Udacity},
+  title         = {Metodologia Scrum e Agile. Oque s\~ao e como aplic\'a-las?},
+  journal       = {Web Mobile Marketing Digital},
+  year          = {2017},
+  url           = {https://br.udacity.com/blog/post/metodologia-scrum-agile},
+  urlaccessdate = {05 mai. 2018},
 }
 
 @Article{Ventura2016,
-  author  = {Pl\'inio Ventura},
-  title   = {O que \'e um Requisito N\~ao-Funcional},
-  journal = {At\'e o momento.},
-  year    = {2016},
-  url     = {http://www.ateomomento.com.br/o-que-e-um-requisito-nao-funcional/},
+  author        = {Pl\'inio Ventura},
+  title         = {O que \'e um Requisito N\~ao-Funcional},
+  journal       = {At\'e o momento.},
+  year          = {2016},
+  url           = {http://www.ateomomento.com.br/o-que-e-um-requisito-nao-funcional/},
+  urlaccessdate = {05 mai. 2018},
 }
 
 @Article{Tybel2017,
-  author  = {Douglas Tybel},
-  title   = {Orienta\c{c}\~oes b\'asicas na elabora\c{c}\~ao de um diagrama de classes},
-  journal = {Devmedia},
-  year    = {2017},
-  url     = {https://www.devmedia.com.br/orientacoes-basicas-na-elaboracao-de-um-diagrama-de-classes/37224},
+  author        = {Douglas Tybel},
+  title         = {Orienta\c{c}\~oes b\'asicas na elabora\c{c}\~ao de um diagrama de classes},
+  journal       = {Devmedia},
+  year          = {2017},
+  url           = {https://www.devmedia.com.br/orientacoes-basicas-na-elaboracao-de-um-diagrama-de-classes/37224},
+  urlaccessdate = {06 mai. 2018},
 }
 
 @Article{Confessor2009,
-  author  = {Henrique Confessor},
-  title   = {Software Mais Flu\^encia Win DAF/FAF Software},
-  journal = {Abra Gagueira},
-  year    = {2009},
-  url     = {http://www.abragagueira.org.br/mais_fluencia.asp},
+  author        = {Henrique Confessor},
+  title         = {Software Mais Flu\^encia Win DAF/FAF Software},
+  journal       = {Abra Gagueira},
+  year          = {2009},
+  url           = {http://www.abragagueira.org.br/mais_fluencia.asp},
+  urlaccessdate = {04 mai. 2018},
 }
 
 @Article{Age2017,
-  author  = {Information Age},
-  title   = {Terapia para a Gagueira - FAA},
-  journal = {Google Play},
-  year    = {2017},
-  url     = {https://play.google.com/store/apps/details?id=delayed.auditory.feedback.stuttering.therapy.daf},
+  author        = {Information Age},
+  title         = {Terapia para a Gagueira - FAA},
+  journal       = {Google Play},
+  year          = {2017},
+  url           = {https://play.google.com/store/apps/details?id=delayed.auditory.feedback.stuttering.therapy.daf},
+  urlaccessdate = {08 mai. 2018},
 }
 
 @Article{Ribeiro2012,
-  author  = {Leandro Ribeiro},
-  title   = {O que \'e UML e Diagramas de Caso de Uso: Introdu\c{c}\~ao Pr\'atica \`a UML},
-  journal = {Devmedia},
-  year    = {2012},
-  url     = {https://www.devmedia.com.br/o-que-e-uml-e-diagramas-de-caso-de-uso-introducao-pratica-a-uml/23408},
+  author        = {Leandro Ribeiro},
+  title         = {O que \'e UML e Diagramas de Caso de Uso: Introdu\c{c}\~ao Pr\'atica \`a UML},
+  journal       = {Devmedia},
+  year          = {2012},
+  url           = {https://www.devmedia.com.br/o-que-e-uml-e-diagramas-de-caso-de-uso-introducao-pratica-a-uml/23408},
+  urlaccessdate = {04 mai. 2018},
 }
 
 @Article{Ventura2016a,
-  author  = {P\'inio Ventura},
-  title   = {Entendendo o Diagrama de Atividades da UML},
-  journal = {At\'e o Momento},
-  year    = {2016},
-  url     = {http://www.ateomomento.com.br/uml-diagrama-de-atividades/},
+  author        = {P\'inio Ventura},
+  title         = {Entendendo o Diagrama de Atividades da UML},
+  journal       = {At\'e o Momento},
+  year          = {2016},
+  url           = {http://www.ateomomento.com.br/uml-diagrama-de-atividades/},
+  urlaccessdate = {04 mai. 2018},
 }
 
 @Article{Ableson2009,
-  author  = {Frank Ableson},
-  title   = {Introdu\c{c}\~ao ao Desenvolvimento do Android},
-  journal = {IBM Developer Works},
-  year    = {2009},
-  url     = {https://www.ibm.com/developerworks/br/library/os-android-devel/index.html},
+  author        = {Frank Ableson},
+  title         = {Introdu\c{c}\~ao ao Desenvolvimento do Android},
+  journal       = {IBM Developer Works},
+  year          = {2009},
+  url           = {https://www.ibm.com/developerworks/br/library/os-android-devel/index.html},
+  urlaccessdate = {07 mai. 2018},
 }
 
 @Article{Developers2018,
-  author  = {Android Developers},
-  title   = {Arquitetura da plataforma android},
-  journal = {Android Developers},
-  year    = {2018},
-  url     = {https://developer.android.com/guide/platform/?hl=pt-br},
+  author        = {Android Developers},
+  title         = {Arquitetura da plataforma android},
+  journal       = {Android Developers},
+  year          = {2018},
+  url           = {https://developer.android.com/guide/platform/?hl=pt-br},
+  urlaccessdate = {07 mai. 2018},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
