--- a/Dissertacao/modelo_dissertacao.tex
+++ b/Dissertacao/modelo_dissertacao.tex
@@ -70,7 +70,7 @@
 \diretoria{Diretoria de Graduação e Formação Profissional}
 \coordenacao{Departamento de Computação}
 \curso{Bacharelado em Engenharia de Software}
-\documento{Dissertação}
+\documento{Proposta de Trabalho de Conclus\~ao do Curso}
 \nivel{Graduação}
 \titulacao{Bacharel}
 \area{Engenharia de Software}
@@ -100,9 +100,8 @@
 \numerodemembrosnabanca{5} % Isso decide se a lista de assinaturas será colocada em duas colunas
 \orientadornabanca{sim} % Se faz parte da banca definir como sim
 \coorientadornabanca{sim} % Se faz parte da banca definir como sim
-\primeiroassina[Título \\ Universidade]{Primeiro Membro da Banca}
-\segundoassina[Título \\Universidade]{Segundo Membro da Banca}
-\terceiroassina[Título \\Universidade]{Terceiro Membro da Banca}
+\primeiroassina[Prof. Dr. \\ UTFPR]{Claiton de Oliveira}
+\segundoassina[Prof. Dr. \\ UTFPR]{Willian Watanabe}
 %\quartoassina[Título \\Universidade]{Quarto Membro da Banca}
 %\quintoassina[Título \\Universidade]{Quinto Membro da Banca}
 %\sextoassina[Título \\Universidade]{Sexto Membro da Banca}
